<resources>
    <string name="app_name">ECHO - A Lite Music Player</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort_asc">Sort by Name Ascending</string>
    <string name="action_sort_recent">Sort by Recently Added</string>
    <string name="intro">This app uses a new feature of Android Oreo called push-notifications. As a result of which the song control panel of the notification bar pops up when any changes are made to the song
playback. For eg. next song is played or the song is paused so that you can change
the song, play/pause while working on other apps without the hassle of opening the Echo app again
or pulling down the notification panel to do the same.</string>
    <string name="solutions">However some users might find it a bit irritating or a distraction. Hence they can always change that behavior by modifying the notification setting of the app by following the given steps :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="inst1">Open the Settings app and go to Apps &amp; Notifications (or equivalent settings if you are running a custom UI) and open Notifications.
    Click on Echo in the list</string>

    <string name="inst2"> Tap on notify under Categories </string>
    <string name="inst3"> Tap on Importance (which would be set to urgent by default) </string>
    <string name="inst4"> Select High from the list
                          Now Restart the app for the changes to take place</string>
    <string name="nxt">&gt;</string>
    <string name="title_activity_online">OnlineActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="help_1">I care for your privacy and this app doesn\'t access data from any directory other than the
        Music, Audio and Downloads folders that usually host stored or downloaded audio files. In order to have a seamless experience make sure that all the song files are located in one of these
    folders.</string>
    <string name="help_1_1">As this is an offline music player, it only works with songs stored offline on your device in the Music, Downloads or Audio Folder.</string>
    <string name="help1_q1">(i) Do you have audio files (.mp3,.wav) stored offline on your device?</string>
    <string name="help1_q2">(ii) Still not seeing any song file in the list?</string>
    <string name="help_2"> In order to have a seamless experience, it is recommended that all your music files are in the Music, Downloads or Audio folders of your device. The app filters out any recordings, alarms, ringtones and duplicate songs automatically.</string>
    <string name="help_3"> Some custom OS / OEM manufacturers use a different name for the folders storing music files.
    In that case the app should still be able to find the song files for you. If in case, you still get a blank list of songs, you can manually create a \"Music\"  folder without quotes in your internal storage\'s root
    directory and copy your music files there.</string>
    <string name="help_3_1">You can go to your file manager, navigate to internal storage, press the 3 vertical dots on the top right corner of the screen and select new folder.
    Name that folder as \"Music\"  and copy your song files to that folder using either your file manager or by
    connecting to your device to a computer.</string>
    <string name="link_help">Alternatively you can use this link to get detailed info on how to modify android\'s internal files:</string>
    <string name="help">Help</string>
    <string name="album">album</string>
    <string name="all_songs">All Songs</string>
    <string name="albums">Albums</string>
    <string name="favorites">Favorites</string>
    <string name="by_recently_added">By Recently Added</string>
    <string name="by_name">By Name</string>
    <string name="search">Search</string>
    <string name="need_help">Need Help?</string>
    <string name="you_don_t_have_any_songs_in_the_music_folder_at_the_moment_nadd_songs_to_continue_enjoying_the_music">You don\'t have any Songs in the Music Folder at the moment.\nAdd songs to continue enjoying the music.</string>
    <string name="you_don_t_have_any_albums_in_the_music_folder_at_the_moment_nadd_songs_to_continue_enjoying_the_music">You don\'t have any Albums in the Music Folder at the moment.\nAdd songs or albums to continue enjoying the music.</string>
    <string name="sort_by_name">action_sort_ascending</string>
    <string name="sort_by_recent">action_sort_recent</string>
    <string name="sorting">action_sort</string>
    <string name="media_playback_failure">Playback failed. Please try another song or restart the app.</string>
    <string name="no_app_share">No App found to share with</string>
    <string name="no_email_app">No email app installed</string>
    <string name="no_browser_app">No browser app installed</string>
    <string name="search_hint">Search for song, album or artist</string>
    <string name="search_fragment_empty_view_Tv">You can search for:\n\n1. Songs\n2. Albums\n3. Artists</string>
    <string name="something_went_wrong_setting_up_the_visualizer">Something went wrong setting up the visualizer.</string>
    <string name="permission_required_to_show_visualizer">Permission required to show Visualizer</string>
    <string name="permission_dialog">The App requires Record Audio permission in order to show the dynamic visualizer.\n\nThe microphone detects the volume level and then adjusts the waves based on the intensity.\n\nPlease select  \"allow while using the app\"  in the permission dialog after pressing Grant Permission. This dialog will appear again only once if you deny or choose  \"only this time\"  and you would need to manually allow the permission in settings in order to use the visualizer.\n\nIt is fine if you do not want to grant this permission. The app will still work normally even without this permission but will not show the visualizer.</string>
    <string name="permission_rationale">The App requires Record Audio permission in order to show the dynamic visualizer.\n\nPlease grant the permission in the settings.\n\nIt is fine it you do not want to grant this permission. The app will still work normally even without this permission but will not show the visualizer unless you manually allow the permission in settings.</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="x">X</string>
    <string name="visualizer_gif">visualizer gif</string>
    <string name="switch_between_albumart_and_visualizer">Switch between Album Art and Visualizer</string>
    <string name="album_art">album art</string>

</resources>
