<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/sort_icon"
        android:title="@string/action_settings"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_sort_recent"

                android:title="@string/by_recently_added" />

            <item
                android:id="@+id/acton_sort_ascending"
                android:title="@string/by_name" />
        </menu>
    </item>

</menu>
